* ensemble-based prediction revised
* seed-extension-based prediction revised
+ --seedNoGUend : prohibit GU base pairs at seed ends
+ outNoLP support in all prediction modes
* FASTA input: sequence id = prefix up to first whitespace from FASTA header
* new default for outOverlap = B: overlapping output enabled (was Q)
+ gzip-compressed file input/output if file name ends in '.gz'

# package
+ (optional) intarnapvalue python3 module to compute p-values of IntaRNA mfe
  predictions based on sequence shuffling and distribution fitting 

# API
* OutputHandler requires an OutputConstraint instances in construction
* Predictor objects now access OutputConstraint instances via the OutputHandler;
  this simplifies the signature of the member functions
* OutputConstraint now guides whether or not Zall is required for output

################################################################################  
################################################################################  

190913 Martin Raden :
 * configure.ac :
   * LIBS exended
 * IntaRNA/general :
   * new|deleteOutStream :
     + gzip-compression support enabled
     * fstream replaced with boost::iostreams::filtering_ostream
   + new|deleteInStream : analog to outstream handling to enable gzip support
 * IntaRNA/InteractionEnergy :
   - getBestE*() : obsolete
   * isValidInternalLoop() : now public
   + internalLoopGU : whether or not GU is allowed in non-stacked interior loops
   + isInternalLoopGUallowed() : returns internalLoopGU
   * isValidInternalLoop() :
     + check internalLoopGU constraint
 * IntaRNA/Predictor :
   * updateZall() :
     + bugfix: additional check for outConstraint.needZall
 * IntaRNA/PredictorMfe :
   - min*Energy : obsolete
 * IntaRNA/PredictorMfe2dHeuristicSeed :
   * fillHybridE() :
     * bugfix Zall update : seed-only also if !noLP
 * IntaRNA/InteractionEnergyIdxOffset : 
   + bugfix: adding missing offset-based overwrites
 * IntaRNA/OutputConstraint :